once obj is being located it will have a short time when its z-index will be high enough that it will not be buried, also while dragging, the obj will also be brought up to the front, and return back to its original z-index once user stops dragging

--- a/panel.Board.IM/imStyle.css
+++ b/panel.Board.IM/imStyle.css
@@ -6,6 +6,8 @@
   height:600px;
 
   background-color: rgba(0,0,255,0.5);
+
+  z-index:10;
 }
 
 #imExitButton{
